MoonApp/moon-monitor.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
   prometheus.io/scrape: "true"
  name: moon-monitor
  namespace: prometheus
  labels:
    app: moon-monitor
spec:
  selector:
    app: moon-monitor
  ports:
    - name: metrics
      port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moon-monitor
  namespace: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moon-monitor
  template:
    metadata:
      labels:
        app: moon-monitor
    spec:
      serviceAccountName: moon-monitor
      containers:
        - name: moon-monitor
          image: aerokube/moon-monitor:1.9.4
          args: ["-namespace", "moon"]
          ports:
            - name: metrics
              containerPort: 8080
