MoonApp/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus-operator-grafana
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:XXXXXXXXXX:certificate/XXXXX-XXX-XXXXXXX-XX-XXXX
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/inbound-cidrs: XX.X.X.X/8,XXX.XXX.XX.XXX/X....
    # external-dns.alpha.kubernetes.io/hostname: lii-grafana.repo.liiaws.net
    # external-dns.alpha.kubernetes.io/alias: "false"
spec:
  #tls:
  #  - hosts:
  #    - grafana.example.com
  rules:
    - host: my-grafana.net
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: prometheus-operator-grafana
              servicePort: 80
